<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">OsirisBio</string>
    <string name="send_report">Send Report</string>
    <string name="cancel">Cancel</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="oops">Oops..!</string>
    <string name="error_network_unavailable">Please check your internet connection and try again.</string>
    <string name="error_internal_server_error">Internal server error. Please try again later.</string>
    <string name="error_server_connect_error">Unable to connect to server. Please try again later.</string>
    <string name="error_invalid_server_data">Unable to fetch valid data from server. Please try again later.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_with_underline"><u>Sign Up</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="error_empty_password">Please enter password.</string>
    <string name="error_empty_confirm_password">Please enter confirm password.</string>
    <string name="error_invalid_confirm_password">Please enter the same password and confirm password.</string>
    <string name="error_incorrect_password">Please enter correct password.</string>
    <string name="error_invalid_password">Please enter password between 8 to 20 characters.</string>
    <string name="error_empty_email">Please enter email.</string>
    <string name="error_empty_otp">Please enter otp.</string>
    <string name="error_invalid_otp">Invalid OTP.</string>
    <string name="error_invalid_email">Please enter valid email.</string>
    <string name="error_empty_first_name">Please enter first name.</string>
    <string name="error_empty_last_name">Please enter last name.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="back_to_login">Login</string>
    <string name="verification_code_text">Enter your email address. We will send an email with a verification code.</string>
    <string name="send_otp">Send OTP</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="verification_otp_send_text">Enter 4 digits OTP send to your Email Id.</string>
    <string name="verify">Verify</string>
    <string name="otp_hint">----</string>
    <string name="resend"><u>Resend</u></string>
    <string name="new_password">New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="dashboard">Home</string>
    <string name="driving_records">Driving Records</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="back_btn_message">Please click BACK again to exit</string>
    <string name="enter_new_password">Enter new password.</string>
    <string name="log_in">Log In</string>
    <string name="test">Test</string>
    <string name="track_the_car">Track the Car</string>
    <string name="ok" tools:ignore="ButtonCase,Typos">Ok</string>
    <string name="coming_soon">Coming Soon…</string>
    <string name="facebook_login">Facebook Login</string>
    <string name="google_login">Google Login</string>
    <string name="skip">Skip</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <!--<string name="error_location">"Current location is unavailable"</string>
    <string name="bluetooth_info_notification_title">Rekon is running. App is using Bluetooth</string>
    <string name="bluetooth_info_notification_message">Bluetooth monitor is running</string>-->
</resources>
