<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_driving_records"
            android:icon="@drawable/ic_driving_records"
            android:title="@string/driving_records" />
        <item
            android:id="@+id/nav_track_the_car"
            android:icon="@drawable/ic_track_the_car"
            android:title="@string/track_the_car" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_log_out"
            android:title="@string/log_out" />
        <item
            android:id="@+id/nav_log_in"
            android:icon="@drawable/ic_login"
            android:title="@string/log_in" />
        <item
            android:id="@+id/nav_test"
            android:icon="@drawable/ic_settings"
            android:title="@string/test" />
    </group>

</menu>
