<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:text="@string/title_forgot_password"
                android:textColor="@color/text_color"
                android:textSize="@dimen/toolbar_title_text_size"
                tools:ignore="SpUsage" />

        </android.support.v7.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="125dp"
                    android:layout_marginTop="30dp"
                    android:contentDescription="@null"
                    android:scaleType="centerInside"
                    android:src="@drawable/bg_forgot_password" />

                <TextView
                    android:id="@+id/tv_forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_left_right_margin"
                    android:layout_marginRight="@dimen/default_left_right_margin"
                    android:layout_marginTop="50dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/verification_code_text"
                    android:textColor="@color/verification_code_text_color"
                    android:textSize="@dimen/verification_code_text_size"
                    tools:ignore="SpUsage" />

                <EditText
                    android:id="@+id/edt_email"
                    style="@style/EditTextStyle"
                    android:layout_marginTop="20dp"
                    android:drawableStart="@drawable/ic_email"
                    android:hint="@string/email"
                    android:imeOptions="actionDone"
                    android:inputType="textWebEmailAddress" />

                <Button
                    android:id="@+id/btn_send_otp"
                    style="@style/BtnStyle"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="56dp"
                    android:text="@string/send_otp" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>