<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:text="@string/title_forgot_password"
                android:textColor="@color/text_color"
                android:textSize="@dimen/toolbar_title_text_size"
                tools:ignore="SpUsage" />

        </android.support.v7.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="125dp"
                    android:layout_marginTop="30dp"
                    android:contentDescription="@null"
                    android:scaleType="centerInside"
                    android:src="@drawable/bg_forgot_password" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_left_right_margin"
                    android:layout_marginRight="@dimen/default_left_right_margin"
                    android:layout_marginTop="50dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/enter_new_password"
                    android:textColor="@color/verification_code_text_color"
                    android:textSize="@dimen/verification_code_text_size"
                    tools:ignore="SpUsage" />

                <android.support.design.widget.TextInputLayout
                    style="@style/EditTextStyle"
                    android:layout_marginTop="20dp"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="#000000">

                    <EditText
                        android:id="@+id/edt_password"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="0dp"
                        android:drawableStart="@drawable/ic_password"
                        android:hint="@string/new_password"
                        android:imeOptions="actionDone"
                        android:inputType="textWebPassword"
                        android:maxLength="20"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_reset_password"
                    style="@style/BtnStyle"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="56dp"
                    android:text="@string/reset_password" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>