<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.CrashActivity">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="100dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="55dp"
                android:fontFamily="sans-serif"
                android:gravity="center|top"
                android:text="@string/oops"
                android:textColor="@color/text_color"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="200"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/something_went_wrong"
                android:textColor="@color/text_color"
                android:textSize="20dp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text1"
                tools:ignore="SpUsage" />

            <Button
                android:id="@+id/cancel"
                style="@style/BtnStyle"
                android:layout_width="135dp"
                android:layout_marginEnd="16dp"
                android:onClick="launchMainActivity"
                android:text="@string/cancel"
                app:layout_constraintBaseline_toBaselineOf="@+id/send_report"
                app:layout_constraintEnd_toEndOf="@+id/space" />

            <Space
                android:id="@+id/space"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text2" />

            <Button
                android:id="@+id/send_report"
                style="@style/BtnStyle"
                android:layout_width="135dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="55dp"
                android:onClick="emailLogFile"
                android:text="@string/send_report"
                app:layout_constraintStart_toStartOf="@+id/space"
                app:layout_constraintTop_toBottomOf="@+id/text2" />

        </android.support.constraint.ConstraintLayout>
    </RelativeLayout>
</layout>
