<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.LoginFragment">

    <LinearLayout
        android:id="@+id/login_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        tools:ignore="Autofill">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/skip_login"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ripple_default_bg"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/_16dp"
                    android:paddingEnd="@dimen/_16dp"
                    android:text="@string/skip"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_18dp"
                    tools:ignore="RelativeOverlap,SpUsage" />
            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="@dimen/_222dp"
                    android:layout_height="@dimen/_105dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="@dimen/_18dp"
                    android:layout_marginEnd="@dimen/_8dp"
                    android:src="@drawable/ic_logo"
                    android:contentDescription="@null"
                    android:focusable="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/edt_email"
                    style="@style/EditTextStyle"
                    android:layout_marginTop="@dimen/_18dp"
                    android:drawableStart="@drawable/ic_email"
                    android:hint="@string/email"
                    android:inputType="textWebEmailAddress"
                    android:theme="@style/EditTextHint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/login_password_input_layout"
                    style="@style/EditTextStyle"
                    android:layout_marginTop="@dimen/login_edit_text_margin_top"
                    android:theme="@style/EditTextHint"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edt_email"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorPrimary">

                    <EditText
                        android:id="@+id/edt_password"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="0dp"
                        android:drawableStart="@drawable/ic_password"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:inputType="textWebPassword"
                        android:maxLength="20"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_sign_in"
                    style="@style/BtnStyle"
                    android:layout_marginTop="@dimen/_16dp"
                    android:text="@string/sign_in"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_password_input_layout" />

                <TextView
                    android:id="@+id/txt_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8dp"
                    android:layout_marginTop="@dimen/_6dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/ripple_default_bg"
                    android:fontFamily="sans-serif"
                    android:padding="@dimen/_8dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_sign_in"
                    tools:ignore="SpUsage" />

                <ImageView
                    android:id="@+id/login_divider"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="@dimen/_6dp"
                    android:background="@drawable/ic_login_divider"
                    android:contentDescription="@null"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_forgot_password" />

                <Button
                    android:id="@+id/btn_sign_in_facebook"
                    style="@style/BtnStyle"
                    android:layout_height="@dimen/sub_btn_height"
                    android:layout_marginTop="@dimen/login_margin_top"
                    android:background="@drawable/ripple_fb_button"
                    android:drawableStart="@drawable/ic_facebook"
                    android:fontFamily="sans-serif"
                    android:text="@string/facebook_login"
                    android:textSize="@dimen/sub_btn_text_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_divider"
                    tools:ignore="SpUsage" />

                <Button
                    android:id="@+id/btn_sign_in_google"
                    style="@style/BtnStyle"
                    android:layout_height="@dimen/sub_btn_height"
                    android:layout_marginTop="@dimen/login_gp_btn_margin_top"
                    android:background="@drawable/ripple_gp_button"
                    android:drawableStart="@drawable/ic_google_plus"
                    android:fontFamily="sans-serif"
                    android:text="@string/google_login"
                    android:textSize="@dimen/sub_btn_text_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_sign_in_facebook"
                    tools:ignore="SpUsage" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_sign_in_google">

                    <TextView
                        android:id="@+id/btn_back_to_login_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/new_here"
                        android:textColor="@color/secondary_text_color"
                        android:textSize="@dimen/_14dp"
                        tools:ignore="SpUsage" />

                    <TextView
                        android:id="@+id/btn_sign_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ripple_default_bg"
                        android:fontFamily="sans-serif"
                        android:padding="@dimen/_6dp"
                        android:text="@string/sign_up"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_14dp"
                        android:textStyle="bold"
                        tools:ignore="SpUsage" />

                </LinearLayout>

            </android.support.constraint.ConstraintLayout>
        </ScrollView>
    </LinearLayout>
</layout>